# flashrom

./: cli_classic.c  cli_getopt.c  cli_output.c  dediprog.c  dmi.c  meson.build  pcidev.c
include/: cli_getopt.h  cli_output.h  flash.h  pcidev.h  programmer.h
platform/: meson.build  udelay.c
src/: meson.build
